- [fix] menu bar has text size fixed like all other control so size/height does not change with OS text scale. Fixes cut off vfoA/B group box labels
- [fix] scope time base differences between RX and TX should be resolved
- [change] wav file recording volume is normalised to ignore RX AF. Note: when muted/0vol recording is 'silent'
- [change] finder will now gather info using multiple threads at a time. Some users were reporting startup time delay
- [change] skinserver now attempts to select skin when downloaded and shows 'wait' mouse pointer whilst changing
- [change] sql reworked to fix collapsed view analogue slider issues. Will require you to setup your sql/vsql levels again
- [change] protocol tri state checkbox changed over to 3 radio buttons, one to select each protocol, and one to select auto
- [change] vfosync in diversity form now mirrors state at top of main console
- [change] scope display time is now in ms, and will take that long to fill the width of the view

## v2.10.3.4 Change Log
- [add] show on startup options for ampview and linearity/ps window. Set in the linearity/ps window
- [add] can now ignore 14bit Midi messages. More devices should work. Option in Setup->Serial/Network/Midi CAT->Midi
- [add] can now combine midi control id, channel and status to be used as the control ID. This should allow devices that share controlIDs for multiple buttons/sliders to work. Options in Setup->Serial/Network/Midi CAT->Midi
- [add] certain skins might make it snow !
- [add] option to prevent rx1+rx2 attenuator linking when using diversity. Setting in the diversity form
- [fix] you can now hear rx2 audio when tx'ing on rx1 and setup->rx2->auto mute rx2 on tx is turned off
- [fix] mic phase reverse now calling correct function in WDSP, and can be turned on/off